k8s/tinyx-home-timeline/srvc-home-timeline/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: srvc-home-timeline-service
spec:
  type: ClusterIP
  selector:
    app: tinyx
    module: srvc-home-timeline
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
