k8s/tinyx-home-timeline/srvc-home-timeline/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: srvc-home-timeline-ingress
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /timeline/home
            pathType: Prefix
            backend:
              service:
                name: srvc-home-timeline-service
                port:
                  number: 8080
